# fossim-application

./: .fossim.json  .gitignore  README.md  deno.json  package.json  svelte.config.ts  vite.config.js  vite.config.ts
.github/workflows/: publish.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bundle/: fossim.metainfo.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  oauth.rs  settings.rs
src/lib/: backend.ts  communities.ts  db.ts  i18n.ts  marked.ts  settings.ts  stores.ts
src/lib/components/: Comment.svelte  MessageBox.svelte
src/lib/forges/: github.ts
src/lib/sections/: ChannelList.svelte  CommunityList.svelte  MessageList.svelte
src/lib/views/: ConfirmHostView.svelte  JoinCommunityView.svelte  OAuthView.svelte  OnboardingView.svelte  SettingsView.svelte  UpdaterView.svelte
src/routes/: +layout.svelte  +page.svelte
translations/: en.json
