[package]
name = "fossim-application"
version = "0.1.0"
authors = ["Aman Khanna (nekename)"]
license = "GPL-3.0-or-later"
edition = "2024"

[lib]
# The `_lib` suffix is necessary to make the lib name unique.
name = "fossim_application_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
built = { version = "0.8", features = ["git2"] }
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octocrab = "0.53"
secrecy = "0.10"
open = "5"
